feat: add setTimeout to focus event

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <script>
   console.log(`Hi`);
   const inputEl = document.querySelector(".inputClass");
-  inputEl.focus();
+  setTimeout(function() {
+    inputEl.focus();
+  }, 2000)
 </script>
 
 </body>
