fix: increase setTimeout to focus event

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   console.log(`Hi`);
   const inputEl = document.querySelector(".inputClass");
   setTimeout(function() {
+    console.log('2 sec passed');
     inputEl.focus();
-  }, 2000)
+  }, 4000)
 </script>
 
 </body>
