fix: delete preventscroll option from textArea

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   const inputEl = document.querySelector(".inputClass");
   setTimeout(function() {
     console.log('4 sec passed');
-    inputEl.focus({preventScroll: true});
+    inputEl.focus();
   }, 1000)
 </script>
 
