delete srcipt, change iframe style

--- a/index.html
+++ b/index.html
@@ -5,17 +5,10 @@
   <title>Title</title>
 </head>
 <body>
-<div style="height: 2000px">hfhg</div>
-<textarea name="someName" id="textareaId" cols="30" rows="10" class="inputClass">Some Text And more text and another text
-</textarea>
-
-<script>
-  const inputEl = document.querySelector(".inputClass");
-  setTimeout(function() {
-    console.log('4 sec passed');
-    inputEl.focus();
-  }, 1000)
-</script>
-
+  <h4>Heading</h4>
+  <label for="test-area">
+    <textarea style="border: 3px solid black;" name="someName" id="textareaId" cols="30" rows="10" class="inputClass">Some Text And more text and another text
+    </textarea>
+  </label>
 </body>
 </html>
