--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <title>Title</title>
 </head>
 <body>
-  <h4>Heading</h4>
   <label for="test-area">
-    <textarea style="border: 3px solid black;" name="someName" id="textareaId" cols="30" rows="10" class="inputClass">Some Text And more text and another text
-    </textarea>
+    <input style="border: 1px solid black; height: 100px; width: 300px;" type="text">
   </label>
 </body>
 </html>
