add flex container

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <title>Title</title>
 </head>
 <body>
+<div style="display: flex; justify-content: center;">
   <label for="test-area">
     <input style="border: 1px solid black; height: 100px; width: 300px;" type="text">
   </label>
+</div>
 </body>
 </html>
