add flex container, add width

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div style="display: flex; justify-content: center;">
-  <label for="test-area">
-    <input style="border: 1px solid black; height: 100px; width: 300px;" type="text">
+  <label style="display: block; width: 100%;" for="test-area">
+    <input style="border: 1px solid black; height: 100px; width: 100%;" type="text">
   </label>
 </div>
 </body>
